remove reduntant profiles, obsolete plugins, etc (#1268)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>