@@ -70,15 +70,15 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <workingDirectory>target/test-out</workingDirectory>
                     <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
+                    <reuseForks>true</reuseForks>
+                    <argLine>
+                        --add-opens com.sun.xml.bind/com.sun.xml.bind.v2=java.xml.bind
+                        --add-opens com.sun.xml.bind/com.sun.xml.bind.v2.schemagen=java.xml.bind
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -123,11 +123,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
